@@ -1,7 +1,6 @@
 package com.masy.ddapp.service.impl;
 
 import com.masy.ddapp.data.dto.PlayerDto;
-import com.masy.ddapp.exception.NotFoundException;
 import com.masy.ddapp.exception.PlayerAlreadyExistsException;
 import com.masy.ddapp.mapper.PlayerMapper;
 import com.masy.ddapp.repository.PlayerRepository;
@@ -24,28 +23,23 @@ public class PlayerServiceImpl implements PlayerService {
     @Override
     @Transactional(readOnly = true)
     public List<PlayerDto> findAll() {
-        return playerRepository.findAll().stream().map(playerMapper::mapToDto).collect(Collectors.toList());
+        return playerRepository.findAll().stream().map(playerMapper::mapToDto).toList();
 
     }
 
     @Override
     public String savePlayer(PlayerDto dto) {
 
-        if (playerRepository.countByName(dto.name()) == 0) {
-            var entity = playerRepository.save(playerMapper.mapToEntity(dto));
-            return entity.getName();
+        if (playerRepository.existsById(dto.name())) {
+            throw new PlayerAlreadyExistsException(dto.name());
         }
 
-        throw new PlayerAlreadyExistsException(dto.name());
+        var entity = playerRepository.save(playerMapper.mapToEntity(dto));
+        return entity.getName();
     }
 
     @Override
     public void deletePlayer(String name) {
-
-        if (playerRepository.countByName(name) == 0) {
-            throw new NotFoundException();
-        }
-
         playerRepository.deleteById(name);
     }
 }
